src/objects/CRM_WF_Planeacion_Calendario_CRM__c.object
<CustomObject>
    <description>Objeto para la aplicación Workflow relacionado con el objeto &quot;Calendario CRM&quot;, permite llevar a cabo la planeación de las cargas de las bases en las fechas establecidas en el Calendario CRM</description>
    <fields>
        <fullName>CRM_WF_ATM__c</fullName>
        <description>Campo para la aplicación Workflow, la casilla se selecciona cuando en la campaña es elegido  el canal de ATM</description>
        <formula>INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;ATM&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Area_solicitante__c</fullName>
        <description>Campo para la aplicación Workflow,, muestra el área de quien está solicitando la carga de la base</description>
        <formula>TEXT(CRM_WF_Nombre_Campana__r.CRM_WF_Area_Solicitante__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Área solicitante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Bcom__c</fullName>
        <description>Campo para la aplicación Workflow, la casilla se selecciona cuando en la campaña es elegido  el canal de  Bcom</description>
        <formula>INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;Bcom&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bcom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Bmovil__c</fullName>
        <description>Campo para la aplicación Workflow, la casilla se selecciona cuando en la campaña es elegido  el canal de Bmovil</description>
        <formula>INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;Bmovil&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bmovil</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Buzon_Squad__c</fullName>
        <description>Campo para la aplicación Workflow, muestra el buzón del Squad que solicita la carga</description>
        <formula>CRM_WF_Nombre_Campana__r.CRM_WF_Buzon_Squad__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buzón Squad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_CRM__c</fullName>
        <description>Devuelve el valor que se pidió para el canal multicanal</description>
        <formula>IF(  RecordType.Name = &quot;Carga Multicanal&quot; ,
     CRM_WF_Volumen__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Canal Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Canal_CRM__c</fullName>
        <description>Campo para la aplicación Workflow, es una casilla que depende del tipo de registro de Planeacion Calendario CRM, cuando está activada el layout de la página muestra los informes para Multicanal</description>
        <formula>RecordType.Name == &quot;Carga Multicanal&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canal CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Canal_SMS_Push__c</fullName>
        <description>Campo para la aplicación Workflow, es una casilla que depende del tipo de registro de Planeacion Calendario CRM, cuando está activada el layout de la página muestra los informes para el canal SMS o Push Notification</description>
        <formula>RecordType.Name == &quot;Carga SMS Push&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canal SMS/Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Canal_SMS_o_Push__c</fullName>
        <label>¿Canal SMS o Push?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Cancelar_Carga__c</fullName>
        <description>Campo para la aplicación Workflow para cancelar la carga de la base</description>
        <label>¿Desea cancelar la Carga?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Sí</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Comentarios__c</fullName>
        <description>Campo para la aplicación Workflow, Muestra comentarios de ayuda, dependiendo del estatus del registro</description>
        <formula>CASE (  CRM_WF_Estatus__c , &quot;Documentación&quot;, &quot; La carga de la base debe de ser aprobada por CRM&quot;,
                                       &quot;Lista de Espera&quot;, &quot; La carga de la base está en lista de espera&quot;, 
                                       &quot;Aprobado&quot;, &quot; La carga de la base fue aprobada&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comentarios</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Dia__c</fullName>
        <formula>CRM_WF_Fecha_Carga__r.CRM_WF_Dia__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Día de la semana</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_EECC__c</fullName>
        <description>Campo para la aplicación Workflow, la casilla se selecciona cuando en la campaña es elegido  el canal de EECC</description>
        <formula>INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;EECC&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EECC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Estatus__c</fullName>
        <description>Campo para la aplicación Workflow, muestra el estatus en el que se encuentra el registro</description>
        <label>Estatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Documentación</fullName>
                    <default>true</default>
                    <label>Documentación</label>
                </value>
                <value>
                    <fullName>Lista de espera</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
                <value>
                    <fullName>Revision_Saturacion</fullName>
                    <isActive>false</isActive>
                    <label>Revisión de Saturación</label>
                </value>
                <value>
                    <fullName>Validación</fullName>
                    <isActive>false</isActive>
                    <label>Validación</label>
                </value>
                <value>
                    <fullName>Validación de carga</fullName>
                    <isActive>false</isActive>
                    <label>Validación de carga</label>
                </value>
                <value>
                    <fullName>VoBoCRM</fullName>
                    <isActive>false</isActive>
                    <label>VoBo CRM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Bloqueada__c</fullName>
        <description>Campor para la aplicación Workflow: La fecha seleccionada ha sido bloqueada. Se recomienda seleccionar otra fecha o enviar a aprobación en caso de urgencia</description>
        <formula>CRM_WF_Fecha_Carga__r.CRM_WF_Bloqueo_de_fecha__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>.</inlineHelpText>
        <label>Fecha Bloqueada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Carga__c</fullName>
        <description>Campo para la aplicación Workflow, busca el registro del día en Calendario CRM, en el cual quiere cargar su base</description>
        <inlineHelpText>Escribe la fecha en formato dd-mmm.-aa y selecciona la fecha en la lista despegable. Ejemplo: 01-sep.-2018</inlineHelpText>
        <label>Fecha de Carga</label>
        <referenceTo>CRM_WF_Calendario_CRM__c</referenceTo>
        <relationshipLabel>Planeaciones Calendario CRM</relationshipLabel>
        <relationshipName>Planeaciones_Calendario_CRM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Fin_Campana__c</fullName>
        <formula>CRM_WF_Nombre_Campana__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha de fin de la campaña</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Inicio_Campana__c</fullName>
        <formula>CRM_WF_Nombre_Campana__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha de inicio de la campaña</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_real_de_carga__c</fullName>
        <description>Campo para la aplicación Workflow, permite monitorear la fecha en la que realmente se  cargó la base</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha real de carga</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_IVR__c</fullName>
        <description>Campo para la aplicación Workflow, la casilla se selecciona cuando en la campaña es elegido  el canal de IVR</description>
        <formula>INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;IVR&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IVR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Justificaci_n_de_Cancelaci_n__c</fullName>
        <description>Campo para la aplicación Workflow, obliga al usuario, con una regla de validación, a escribir una justificación de  porqué cancela  su registro</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Justificación de Cancelación</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Monitor_de_Volumen__c</fullName>
        <description>Campo para la aplicación Workflow. Muestra imágenes de ayuda dependiendo del estatus del registro</description>
        <formula>IF( OR( ISPICKVAL(CRM_WF_Estatus__c, &quot;Documentación&quot;) , ISPICKVAL(CRM_WF_Estatus__c, &quot;Lista de espera&quot;), ISPICKVAL(CRM_WF_Estatus__c, &quot;Rechazado&quot;) ),
       IMAGE(&quot;/servlet/servlet.FileDownload?file=0151U000001YpSn&quot;, &quot;Red&quot;), 
       IMAGE(&quot;/servlet/servlet.FileDownload?file=0151U000001YpSp&quot;, &quot;Green&quot; )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monitor de volúmen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_Campana__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relación de búsqueda hacia campaña</description>
        <label>Nombre de la campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Planeaciones Calendario CRM</relationshipLabel>
        <relationshipName>Planeaciones_Calendario_CRM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Pregunta_Canal_CRM__c</fullName>
        <label>¿Canal CRM?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Push_Notification_del__c</fullName>
        <description>Campo para la aplicación Workflow, la casilla se selecciona cuando en la campaña es elegido  el canal de Push Notification</description>
        <formula>INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;Push Notification&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaña contiene Push Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_SMS_Push__c</fullName>
        <formula>IF( RecordType.Name = &quot;Carga SMS Push&quot;, CRM_WF_Volumen__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Canal SMS/Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_SMS_del__c</fullName>
        <description>Campo para la aplicación Workflow, la casilla se selecciona cuando en la campaña es elegido  el canal de SMS</description>
        <formula>INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;SMS&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaña contiene SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Sdat__c</fullName>
        <description>Campo para la aplicación Workflow, la casilla se selecciona cuando en la campaña es elegido  el canal de Sdat</description>
        <formula>INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;Sdat&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sdat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_de_Campa_a__c</fullName>
        <description>Campo para la aplicación Workflow, permite al usuario elegir el tipo de campaña</description>
        <label>Tipo de Campaña</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INFORMATIVA</fullName>
                    <label>Informativa</label>
                </value>
                <value>
                    <fullName>OFERTA COMERCIAL</fullName>
                    <label>Oferta Comercial</label>
                </value>
                <value>
                    <fullName>BIDIRECCIONAL</fullName>
                    <label>Bidireccional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_Adquiriente_Multicanal__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área Adquiriente Multicanal.</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Adq_Multicanal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Adquiriente Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_Adquiriente_SMS_Push__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área.</description>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Adq_SMS_Push__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Adquirente SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_Apps_Verticales_Multicanal__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área Apps Verticales.</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Apps_Vert_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Apps Verticales Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_Clientes_Multicanal__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área Cliente.</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Clientes_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Clientes Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_Consumo_Multicanal__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área Consumo.</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Consumo_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Consumo Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_Cuentas_Multicanal__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área Cuentas.</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Cuentas_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Cuentas Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_Digital_Multicanal__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área Digital</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Digital_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Digital Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_Inversones_Multicanal__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área Inversiones</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Inversiones_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Inversiones Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_Medios_Multicanal__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área Medios</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Medios_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Medios Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_Nomina_Multicanal__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área Nómina</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Nomina_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Nomina Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_PYME_Multicanal__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área PYME.</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_PYME_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total PYME Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_S_Autos_Multicanal__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área S. Autos.</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_S_Auto_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total S. Autos Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_S_Danos_Multicanal__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área S. Daños.</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_S_Danos_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total S. Daños Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_VT_S_Salud_Multicanal__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área S. Salud</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_S_Salud_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total S. Salud Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Ventanilla__c</fullName>
        <description>Campo para la aplicación Workflow, la casilla se selecciona cuando en la campaña es elegido  el canal de Ventanilla</description>
        <formula>INCLUDES( CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Ventanilla&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ventanilla</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Aprobado_CRM__c</fullName>
        <description>Campo para la aplicación Workflow, devuelve el volumen aprobado para Multicanal</description>
        <formula>CRM_WF_Fecha_Carga__r.CRM_WF_Volumen_Aprobado_CRM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Aprobado Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Aprobado_SMS_Push__c</fullName>
        <description>Campo para la aplicación Workflow, volumen aprobado para el canal SMS Pus</description>
        <formula>CRM_WF_Fecha_Carga__r.CRM_WF_Volumen_Aprobado_SMS_Push__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Aprobado SMS/Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Solicitado_CRM__c</fullName>
        <description>Campo para la aplicación Workflow, devuelve el  volumen de bases que se han solicitado para esa fecha</description>
        <formula>CRM_WF_Fecha_Carga__r.CRM_WF_Volumen_Acumulado_CRM__c -  CRM_WF_Fecha_Carga__r.CRM_WF_Volumen_cancelado_CRM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Solicitado Multicanal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Solicitado_SMS_Push__c</fullName>
        <formula>CRM_WF_Fecha_Carga__r.CRM_WF_Volumen_Acumulado_SMS_Push__c -   CRM_WF_Fecha_Carga__r.CRM_WF_Volumen_cancelado_SMS_Push__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Solicitado SMS/Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Total_Apps_Verticales_SMS__c</fullName>
        <description>Volumen Total Adquirente SMS Push</description>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Apps_Vert_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Apps Verticales SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Total_Clientes_C_SMS_Push__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área.</description>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Clientes_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Clientes C SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Total_Consumo_SMS_Push__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área.</description>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Consumo_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Consumo SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Total_Cuentas_SMS_Push__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área.</description>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Cuentas_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Cuentas SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Total_Digital_SMS_Push__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área.</description>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Digital_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Digital SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Total_Inversiones_SMS__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área.</description>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Inversiones_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Inversiones SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Total_Medios_De_Pago_SMS__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área.</description>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Medios_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Medios de pago SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Total_Nomina_SMS_Push__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área.</description>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Nomina_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Nómina SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Total_Pyme_SMS_Push__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área.</description>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_PYME_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total PYME SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Total_S_Auto_SMS_Push__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área.</description>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_S_Auto_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total S. Auto SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Total_S_Danos_SMS_Push__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área.</description>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_S_Danos_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total S. Daños SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_Total_S_Salud_SMS_Push__c</fullName>
        <description>Resumen del campo volumen mas el acumulado por área.</description>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_S_Salud_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total S. Salud SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen__c</fullName>
        <description>Campo para la aplicación Workflow, permite al usuario escribir el volumen de registros que tiene la base que desea cargar</description>
        <inlineHelpText>Requiere autorización si el volumen es mayor a 150,000 o existe saturación en la fecha programada de carga.</inlineHelpText>
        <label>Volumen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Volumen_real_de_carga__c</fullName>
        <description>Campo para la aplicación Workflow, permite monitorear el volumen verdadero  que subió el generador</description>
        <label>Volumen real de carga</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Dias_Restantes_Carga_Base__c</fullName>
        <description>Campo para la aplicación WF, se utiliza en regla de validación, este campo cuenta el número de días que restan para la fecha de carga elegida</description>
        <formula>CRM_WF_Fecha_Carga__r.CRM_WF_Fecha_de_Carga__c -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días restantes para carga de la base</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Generador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo de búsqueda para la aplicación Workflow, busca el nombre del Generador de la Base</description>
        <label>Generador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.GBL_WF_Funcion__c</field>
                <operation>equals</operation>
                <value>Generador</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Planeaciones Calendario CRM</relationshipLabel>
        <relationshipName>Planeaciones_Calendario_CRM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WF_ATM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación Workflow, la casilla la selecciona el usuario cuando en la campaña es elegido el canal de ATM</description>
        <label>ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Area_Solicitante_Auxiliar__c</fullName>
        <description>Campo texto para la aplicación wf permite traer el valor del área solicitante</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Área solicitante auxiliar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bcom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación Workflow, la casilla la selecciona el usuario cuando en la campaña es elegido el canal de Bcom</description>
        <label>Bcom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bmovil__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación Workflow, la casilla la selecciona el usuario cuando en la campaña es elegido el canal de Bmovil</description>
        <label>Bmovil</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Comentarios_Adicionales__c</fullName>
        <description>Captura de datos adicionales en planeación calendario CRM</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios Adicionales</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WF_Deposito__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Depósito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>